# gen_cli_handler

./: .gitignore  CMakeLists.txt  README.md
libs/embedded_cli/: embedded_cli.c  embedded_cli.h
libs/wsconsole/: wsconsole.c  wsconsole.h  wserr.h
src/: CMakeLists.txt  main.c
